Added missing features
